--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <title>Himalaya Gupta</title>
     <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
 </head>
 
 <body>
@@ -26,23 +30,26 @@
     </header>
     <section id="intro">
         <div class="intro_page_content">
-            <h1>Himalaya Gupta</h1>
+            <h1 class="anim2" data-delay="1s" data-type="moveDown">Himalaya Gupta</h1>
             <h2 class="anim" data-delay="1s" data-type="moveRight">Full-stack Developer</h2>
             <h6 class="anim" data-delay="1s" data-type="moveLeft">Enginner by choice, Developer by passion</h6>
         </div>
     </section>
     <section id="aboutme">
-        <div class="myinfo anim" data-delay="1s" data-type="moveRight">
-            <h1>About Me</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus fugit ipsa obcaecati at
+        <div class="myinfo">
+            <h1 class="anim" data-delay="1s" data-type="moveLeft">About Me</h1>
+            <p class="anim2" data-delay="0.5s" data-type="moveRight">Lorem ipsum dolor, sit amet consectetur adipisicing
+                elit. Necessitatibus fugit ipsa obcaecati at
                 reprehenderit reiciendis aut molestiae dolorum tenetur pariatur eaque doloremque labore, modi nihil
                 minus ad architecto itaque error harum sapiente est hic suscipit! Quae ab aliquid, repellat veritatis
                 quod enim laudantium quisquam. Magni asperiores blanditiis reiciendis corporis tenetur?</p>
-                <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit doloribus temporibus cum
+            <br>
+            <p class="anim" data-delay="1s" data-type="moveRight">Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Reprehenderit doloribus temporibus cum
                 perspiciatis nesciunt neque error? Placeat, qui et vitae ipsam itaque adipisci reiciendis facilis nam,
                 deserunt ex earum modi?</p><br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea earum expedita minus autem ad voluptatem.
+            <p class="anim2" data-delay="1.2s" data-type="moveRight">Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Ea earum expedita minus autem ad voluptatem.
             </p>
         </div>
         <div class="myskills" class="anim" data-delay="0.5s" data-type="moveLeft">
@@ -78,50 +85,37 @@
         </div>
     </section>
     <section id="hidden">
-        <div class="myinfo anim" data-delay="1s" data-type="moveRight">
-            <h1>Tools I Use</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus fugit ipsa obcaecati at
-                reprehenderit reiciendis aut molestiae dolorum tenetur pariatur eaque doloremque labore, modi nihil
-                minus ad architecto itaque error harum sapiente est hic suscipit! Quae ab aliquid, repellat veritatis
-                quod enim laudantium quisquam. Magni asperiores blanditiis reiciendis corporis tenetur?</p>
-                <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit doloribus temporibus cum
-                perspiciatis nesciunt neque error? Placeat, qui et vitae ipsam itaque adipisci reiciendis facilis nam,
-                deserunt ex earum modi?</p><br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea earum expedita minus autem ad voluptatem.
-            </p>
-        </div>
-        <!-- <div class="myskills2" class="anim" data-delay="0.5s" data-type="moveLeft">
-            <h2 class="anim" data-delay="0.5s" data-type="moveRight">Tools I Use</h2>
-            <div class="logoName anim" data-type="moveLeft" data-delay="0.5s">
+        <div class="myskills2">
+            <h2 class="anim" data-type="moveRight" data-delay="1s">Tools I Use</h2>
+            <div class="logoName anim2" data-delay="1s" data-type="moveUp">
                 <h1>HTML</h1>
-                <img src="./images/html.svg" alt="" width="40">
+                <img src="./images/html.svg" alt="1.1s" width="40">
             </div>
-            <div class="logoName anim" data-type="moveLeft" data-delay="0.6s">
+            <div class="logoName anim2" data-delay="1.2s" data-type="moveUp">
                 <h1>CSS</h1>
                 <img src="./images/css.svg" alt="" width="40">
             </div>
-            <div class="logoName anim" data-type="moveLeft" data-delay="0.7s">
+            <div class="logoName anim2" data-delay="1.3s" data-type="moveUp">
                 <h1>JS</h1>
                 <img src="./images/js.svg" alt="" width="40">
             </div>
-            <div class="logoName anim" data-type="moveLeft" data-delay="0.8s">
+            <div class="logoName anim2" data-delay="1.4s" data-type="moveUp">
                 <h1>BootStrap</h1>
                 <img src="./images/bootstarp.svg" alt="" width="40">
             </div>
-            <div class="logoName anim" data-type="moveLeft" data-delay="0.9s">
+            <div class="logoName anim2" data-delay="1.5s" data-type="moveUp">
                 <h1>Django</h1>
                 <img src="./images/django.svg" alt="" width="38">
             </div>
-            <div class="logoName anim" data-type="moveLeft" data-delay="1s">
+            <div class="logoName anim2" data-delay="1.6s" data-type="moveUp">
                 <h1>PostgreSQL</h1>
                 <img src="./images/postgresql.svg" alt="" width="40">
             </div>
-            <div class="logoName anim" data-type="moveLeft" data-delay="1.1s">
+            <div class="logoName anim2" data-delay="1.7s" data-type="moveUp">
                 <h1>Git</h1>
                 <img src="./images/git.svg" alt="" width="40">
             </div>
-        </div> -->
+        </div>
     </section>
     <section id="projects">
         <div class="project_information">
@@ -130,51 +124,53 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="imgbx">
-                        <img src="./images/dev3.JPG" alt="">
-                    </div>
-                    <div class="description">
-                        <h3 class="desc">Ecommerce Site</h3>
-                        <a href="#" class="visit-site">Visit</a>
-                    </div>
+                    <div class="box">
+                        <div class="imgbx">
+                          <img src="./images/dev5.JPG" alt="">
+                        </div>
+                        <div class="content">
+                          <div class="product-title">
+                            <h3 class="p_title" style="color:black">Ecommerce Site</h3>
+                            <p style="margin-top:30px">
+                                Assume this to be  the description of the project <br>
+                                ⏭ Technology used ,etc....
+                            </p>
+                          </div>
+                        </div>
+                      </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="imgbx">
-                        <img src="./images/mad2.JPG" alt="">
-                    </div>
-                    <div class="description">
-                        <h3 class="desc">Ecommerce Site</h3>
-                        <a href="#" class="visit-site">Visit</a>
-                    </div>
+                    <div class="box">
+                        <div class="imgbx">
+                          <img src="./images/mad2.JPG" alt="">
+                        </div>
+                        <div class="content">
+                          <div class="product-title">
+                            <h3 class="p_title">This Portfolio</h3>
+                            <p style="margin-top:30px">
+                                Assume this to be  the description of the project <br>
+                                ⏭ Technology used ,etc....
+                            </p>
+                          </div>
+                        </div>
+                      </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="imgbx">
-                        <img src="./images/dev5.JPG" alt="">
-                    </div>
-                    <div class="description">
-                        <h3 class="desc">Ecommerce Site</h3>
-                        <a href="#" class="visit-site">Visit</a>
-                    </div>
+                    <div class="box">
+                        <div class="imgbx">
+                          <img src="./images/dev3.JPG" alt="">
+                        </div>
+                        <div class="content">
+                          <div class="product-title">
+                            <h3 class="p_title">Blog Site</h3>
+                            <p style="margin-top:30px">
+                                Assume this to be  the description of the project <br>
+                                ⏭ Technology used ,etc....
+                            </p>
+                          </div>
+                        </div>
+                      </div>
                 </div>
-                <div class="swiper-slide">
-                    <div class="imgbx">
-                        <img src="./images/dev4.JPG" alt="">
-                    </div>
-                    <div class="description">
-                        <h3 class="desc">Ecommerce Site</h3>
-                        <a href="#" class="visit-site">Visit</a>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="imgbx">
-                        <img src="./images/dev3.JPG" alt="">
-                    </div>
-                    <div class="description">
-                        <h3 class="desc">Ecommerce Site</h3>
-                        <a href="#" class="visit-site">Visit</a>
-                    </div>
-                </div>
-
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination">
@@ -184,11 +180,6 @@
     </section>
     <section id="contactme">
     </section>
-    <script>
-        $(document).on('click', 'ul li ', function () {
-            $(this).addClass('active_links').siblings().removeClass('active_links')
-        })
-    </script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper('.swiper-container', {
@@ -204,8 +195,8 @@
                 slideShadows: true,
             },
             autoplay: {
-                delay: 3000,
-                disableOnInteraction: false,
+                delay: 5000,
+                disableOnInteraction:false,
             },
             pagination: {
                 el: '.swiper-pagination',
@@ -213,30 +204,15 @@
             },
         });
 
-        var intro = document.querySelectorAll('.anim')
-        observer = new IntersectionObserver((entries) => {
-            //console.log(entries)
-            entries.forEach(entry => {
-                if (entry.intersectionRatio > 0) {
-                    entry.target.style.animation =
-                        `${entry.target.dataset.type} ${entry.target.dataset.delay} forwards`
-                } else {
-                    entry.target.style.animation = 'none'
-                }
-            })
-
-            //console.log(entries[0].target)
-        })
-        intro.forEach(one => {
-            observer.observe(one)
-        })
-
         window.addEventListener('scroll', function () {
             var header = document.querySelector('header');
             header.classList.toggle('sticky', window.scrollY > 0)
+            console.log('done')
+            changeHeight()
         })
     </script>
     <script src="./js/style.js"></script>
+    <script src="./js/projects.js"></script>
 </body>
 
 </html>
