--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                             <p style="line-height: 35px;">
                                 Technology Used : <br>
                                 ⏩ HTML, CSS, JS <br>
-                                ⏭ Intersection Observer API <br>
-                                ⏭ Git <br>
+                                ⏩ Intersection Observer API <br>
+                                ⏩ Git <br>
                                 
                                 Exclusive Features : <br>
                                 ⏩ Active slide pop up automatically<br>
@@ -190,12 +190,12 @@
                             <p style="line-height: 35px;">
                                 Technology Used : <br>
                                 ⏩ HTML, CSS, JS <br>
-                                ⏭ Django, Django Signals<br>
-                                ⏭ Postgres<br>
+                                ⏩ Django, Django Signals<br>
+                                ⏩ Postgres<br>
                                 
                                 Exclusive Features : <br>
                                 ⏩ User can Follow each other<br>
-                                ⏭ Direct messages
+                                ⏩ Direct messages
                                 <br>
                                 Site is in construction right now
                             </p>
